2006-01-08  Claudio Fontana  <claudio@gnu.org>

	* src/mkid.c: fixed bad offtostr usage (now uses return value)
	
2006-01-06  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: reverted change to "conditionally add -I ../intl to the
	  CFLAGS to let all subdirs find the included libintl.h"
	* m4/gettext.m4: offer a more general solution to the above problem,
	  by automatically adding the internal intl directory to the CPPFLAGS
	  when used.
	* lib/regex_internal.h: apply workaround for buggy pgcc preprocessor
	  handling large unsigned 64 bit values as signed, and thus breaking
	  compilation.

	* distribute.sh: changed id-utils to idutils
	* distribute-alpha.sh: likewise
	* BLURB: likewise
	* README-alpha: likewise
	
	* configure.ac: changed bug report address to bug-idutils@gnu.org
	
	* doc/id-utils.texi: renamed to doc/idutils.texi, and fixed content
	  accordingly
	* doc/Makefile.am: reflect filename change
	
	* lisp/id-utils.el: renamed to lisp/idutils.el, and fixed content
	  accordingly
	* lisp/Makefile.am: reflect filename change

	* po/*.po: replaced bug-id-utils@gnu.org with bug-idutils@gnu.org


2005-12-27  Claudio Fontana  <claudio@gnu.org>
	
	* README-alpha: added information about successful builds
	* configure.ac: fixed unwanted change in bugs mailing list address
	* configure.ac: moved development to version 4.1
	* configure.ac: conditionally add -I ../intl to the CFLAGS,
	  to let all subdirs find the included libintl.h

	* m4/extra_dist.sh: added script to autogenerate extra dist Makefile.am
	* src/Makefile.am: pass libgnu to the linker before and after libintl
	  to solve mutual dependencies problems caused by gnulib modules
	  getopt and regex, which include libintl.h
			
	* lib/dirname.c, lib/dirname.h [new files]: added dirname module
	* lib/basename.c [new file]: likewise
	* lib/stripslash.c [new file]: likewise
	* lib/Makefile.am: likewise (gnulib-generated)
	* m4/dirname.m4, m4/dos.m4 [new files]: likewise
	